test/parser/leading-decimal-mark.delta.output
leading-decimal-mark.delta:4:12: error: unexpected '.'
var half = .5;
           ^
leading-decimal-mark.delta:4:12: error: unexpected '.'
var half = .5;
           ^
