test/parser/leading-decimal-mark.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:12: error: unexpected '.'
var half = .5;
